--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,11 @@ dependencies = [
     "langdetect",
     "python-dotenv",
     "openpyxl",
+    "wordcloud",
+    "spacy",
+    "nltk",
+    "unidecode",
+    "matplotlib",
 ]
 
 [project.optional-dependencies]
@@ -39,7 +44,6 @@ dev = [
     "mypy>=1.18.2",
     "black>=25.9.0",
     "isort>=6.1.0",
-    "pytest>=8.3.4",
 ]
 
 [tool.poetry]
